国際化: create.htmlのエラーメッセージ表示を改善し、messages_ja.propertiesに新しいエラーメッセージを追加